small align fix

--- a/src/app/slotting/node.component.scss
+++ b/src/app/slotting/node.component.scss
@@ -224,7 +224,7 @@ $slotSize: 35px;
     }
 
     .squad-siblings {
-      min-height: 30px;
+      min-height: 40px;
       padding-left: 5px;
       padding-right: 5px;
     }
